fix problem with width: 50vw for two columns and scrollbar, all blockes moved to the next line...

--- a/css/block4.css
+++ b/css/block4.css
@@ -11,9 +11,8 @@
 
 .b4__box-wrapper {
   min-width: 45vw;
-  max-width: 50vw;
-  width: 100%;
   height: 50vw;
+  flex: 1;
 
   display: flex;
   align-items: center;
@@ -27,7 +26,7 @@
 }
 .b4__photo {
   width: 100%;
-  min-height: 50vw;
+  ``min-height: 50vw;
 }
 
 .b4__name,
@@ -72,6 +71,8 @@
     font-size: 1.2em;
   }
   .b4__box-wrapper {
+    flex: 0;
+    min-width: 95vw;
     width: 100vw;
     height: 70vw;
   }
